--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -36,25 +36,28 @@
   </style>
 </head>
 
-<body class="bg-[#121212] text-white font-sans">
+<body class="bg-white text-gray-900 font-sans leading-relaxed tracking-wide min-h-screen flex flex-col">
+
+  <!-- Main Content Wrapper -->
+  <div class="flex-grow">
 
   <!-- Sticky Header -->
-  <header class="bg-[#121212] border-b border-white/10 sticky top-0 z-50 px-6 py-4 shadow-lg">
+  <header class="bg-white/95 backdrop-blur-md border-b border-gray-200 sticky top-0 z-50 px-6 py-4 shadow-sm">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="/" class="text-crayYellow font-extrabold text-xl">Craytivo</a>
-      <a href="/" class="text-sm font-medium text-crayTeal hover:underline transition">← Back to Home</a>
+      <a href="/" class="text-crayYellow font-extrabold text-xl hover:scale-105 transition-transform duration-300">Craytivo</a>
+      <a href="/" class="text-sm font-medium text-crayTeal hover:text-crayTeal/80 transition-colors duration-300">← Back to Home</a>
     </div>
   </header>
 
   <!-- Main Content -->
   <main class="max-w-4xl mx-auto px-6 py-16">
     <h1 class="text-4xl font-extrabold text-crayYellow mb-8">Privacy Policy</h1>
-    <p class="text-gray-300 mb-6">This Privacy Policy explains how Craytivo collects, uses, and protects your personal information when you use our website.</p>
+    <p class="text-gray-600 mb-6">This Privacy Policy explains how Craytivo collects, uses, and protects your personal information when you use our website.</p>
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">1. Information We Collect</h2>
-      <p class="text-gray-400 mb-2">We may collect personal information such as your name, email address, phone number, and project details when you:</p>
-      <ul class="list-disc pl-6 text-gray-400">
+      <p class="text-gray-700 mb-2">We may collect personal information such as your name, email address, phone number, and project details when you:</p>
+      <ul class="list-disc pl-6 text-gray-700">
         <li>Submit a contact form</li>
         <li>Sign up for updates</li>
         <li>Communicate with us directly</li>
@@ -63,8 +66,8 @@
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">2. How We Use Your Information</h2>
-      <p class="text-gray-400">We use the information we collect to:</p>
-      <ul class="list-disc pl-6 text-gray-400 mt-2">
+      <p class="text-gray-700">We use the information we collect to:</p>
+      <ul class="list-disc pl-6 text-gray-700 mt-2">
         <li>Respond to your inquiries and requests</li>
         <li>Provide design services</li>
         <li>Improve our website and offerings</li>
@@ -74,41 +77,44 @@
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">3. Cookies & Tracking</h2>
-      <p class="text-gray-400">We use cookies and basic analytics to understand how visitors interact with our website. This helps us improve performance and user experience.</p>
+      <p class="text-gray-700">We use cookies and basic analytics to understand how visitors interact with our website. This helps us improve performance and user experience.</p>
     </section>
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">4. Data Protection</h2>
-      <p class="text-gray-400">We implement appropriate security measures to protect your data. However, please note that no system can be guaranteed 100% secure.</p>
+      <p class="text-gray-700">We implement appropriate security measures to protect your data. However, please note that no system can be guaranteed 100% secure.</p>
     </section>
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">5. Sharing of Information</h2>
-      <p class="text-gray-400">We do not sell or share your personal information with third parties unless required by law or to fulfill our services (e.g., domain registration providers).</p>
+      <p class="text-gray-700">We do not sell or share your personal information with third parties unless required by law or to fulfill our services (e.g., domain registration providers).</p>
     </section>
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">6. Your Rights</h2>
-      <p class="text-gray-400">You may request to review, update, or delete your personal information by contacting us at <a href="mailto:craytivo@gmail.com" class="text-crayTeal hover:underline">craytivo@gmail.com</a>.</p>
+      <p class="text-gray-700">You may request to review, update, or delete your personal information by contacting us at <a href="mailto:craytivo@gmail.com" class="text-crayTeal hover:text-crayTeal/80 transition-colors duration-300">craytivo@gmail.com</a>.</p>
     </section>
 
     <section class="mb-8">
       <h2 class="text-2xl font-semibold text-crayTeal mb-4">7. Changes to This Policy</h2>
-      <p class="text-gray-400">We may update this Privacy Policy from time to time. Changes will be posted on this page with a revised “Last Updated” date.</p>
+      <p class="text-gray-700">We may update this Privacy Policy from time to time. Changes will be posted on this page with a revised "Last Updated" date.</p>
     </section>
 
     <p class="text-sm text-gray-500 mt-12">Last updated: July 2025</p>
   </main>
 
+  </div>
+  <!-- End Main Content Wrapper -->
+
   <!-- Footer -->
-  <footer class="bg-[#1e1e1e] border-t border-white/10 text-gray-400 py-8 px-6 text-sm">
+  <footer class="bg-gray-50 border-t border-gray-200 text-gray-600 py-8 px-6 text-sm w-full mt-auto">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6">
       <div class="text-center md:text-left">
         <p class="mb-1">&copy; 2025 <span class="text-crayYellow font-medium">Craytivo</span>. All rights reserved.</p>
         <p class="text-xs text-gray-500">Bold web design for modern brands.</p>
       </div>
       <div class="text-center md:text-right">
-        <a href="/" class="hover:text-crayTeal transition font-medium">← Back to Home</a>
+        <a href="/" class="hover:text-crayTeal transition-colors duration-300 font-medium">← Back to Home</a>
       </div>
     </div>
   </footer>
