--- a/index.html
+++ b/index.html
@@ -744,65 +744,65 @@
     <p class="text-gray-600 text-lg max-w-2xl mx-auto mb-14">Flexible packages for Edmonton-based startups and small businesses.</p>
 
     <!-- Plans -->
-    <div class="grid md:grid-cols-3 gap-8" id="pricing-cards">
-      <!-- Plan Card -->
-      <div class="pricing-card group bg-white border border-gray-200 rounded-2xl p-8 shadow-md hover:shadow-xl transition hover:scale-[1.03] flex flex-col justify-between" data-plan="Starter" data-base="299">
-        <div>
-          <h3 class="text-xl font-bold text-gray-900 mb-1">🟢 Starter</h3>
-          <p class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-crayTeal to-teal-500 mb-6">$<span class="base-price">299</span>+</p>
-          <ul class="text-sm text-gray-700 space-y-2 list-disc list-inside text-left mb-6">
-            <li>1 responsive page</li>
-            <li>Mobile optimized</li>
-            <li>Contact form (anti-spam)</li>
-            <li>Basic SEO setup</li>
-            <li>2 revision rounds</li>
-            <li>Basic branding</li>
-            <li>5–7 day delivery</li>
-          </ul>
-        </div>
-        <div class="text-lg font-semibold text-crayYellow mt-auto">Total: $<span class="plan-total">299</span></div>
-      </div>
-
-      <!-- Business -->
-<div class="pricing-card group bg-white border border-crayYellow rounded-2xl p-8 shadow-md hover:shadow-xl transition hover:scale-[1.03] flex flex-col justify-between relative" data-plan="Business" data-base="599">
-  <!-- Badge -->
-  <div class="absolute -top-3 -right-3">
-    <span class="bg-crayYellow text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">Best Value</span>
+<div class="grid md:grid-cols-3 gap-8" id="pricing-cards">
+  <!-- Starter -->
+  <div class="pricing-card group bg-white border border-gray-200 rounded-2xl p-8 shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300 flex flex-col justify-between" data-plan="Starter" data-base="299" data-aos="fade-up" data-aos-delay="100">
+    <div>
+      <h3 class="text-xl font-bold text-gray-900 mb-1">🟢 Starter</h3>
+      <p class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-crayTeal to-teal-500 mb-6">$<span class="base-price">299</span>+</p>
+      <ul class="text-sm text-gray-700 space-y-2 list-disc list-inside text-left mb-6">
+        <li>1 responsive page</li>
+        <li>Mobile optimized</li>
+        <li>Contact form (anti-spam)</li>
+        <li>Basic SEO setup</li>
+        <li>2 revision rounds</li>
+        <li>Basic branding</li>
+        <li>5–7 day delivery</li>
+      </ul>
+    </div>
+    <div class="text-lg font-semibold text-crayYellow mt-auto">Total: $<span class="plan-total">299</span></div>
   </div>
 
-  <div>
-    <h3 class="text-xl font-bold text-gray-900 mb-1">🔵 Business</h3>
-    <p class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-crayYellow to-yellow-500 mb-6">$<span class="base-price">599</span>+</p>
-    <ul class="text-sm text-gray-700 space-y-2 list-disc list-inside text-left mb-6">
-      <li>Up to 5 pages</li>
-      <li>SEO setup</li>
-      <li>GA4 integration</li>
-      <li>Speed optimization</li>
-      <li>2 revision rounds</li>
-      <li>7–10 day delivery</li>
-    </ul>
+  <!-- Business -->
+  <div class="pricing-card group bg-white border border-crayYellow rounded-2xl p-8 shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300 flex flex-col justify-between relative" data-plan="Business" data-base="599" data-aos="fade-up" data-aos-delay="200">
+    <!-- Best Value Badge -->
+    <div class="absolute -top-3 -right-3">
+      <span class="bg-crayYellow text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">Best Value</span>
+    </div>
+
+    <div>
+      <h3 class="text-xl font-bold text-gray-900 mb-1">🔵 Business</h3>
+      <p class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-crayYellow to-yellow-500 mb-6">$<span class="base-price">599</span>+</p>
+      <ul class="text-sm text-gray-700 space-y-2 list-disc list-inside text-left mb-6">
+        <li>Up to 5 pages</li>
+        <li>SEO setup</li>
+        <li>GA4 integration</li>
+        <li>Speed optimization</li>
+        <li>2 revision rounds</li>
+        <li>7–10 day delivery</li>
+      </ul>
+    </div>
+    <div class="text-lg font-semibold text-crayYellow mt-auto">Total: $<span class="plan-total">599</span></div>
   </div>
-  <div class="text-lg font-semibold text-crayYellow mt-auto">Total: $<span class="plan-total">599</span></div>
+
+  <!-- Custom -->
+  <div class="pricing-card group bg-white border border-gray-200 rounded-2xl p-8 shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300 flex flex-col justify-between" data-plan="Custom" data-base="899" data-aos="fade-up" data-aos-delay="300">
+    <div>
+      <h3 class="text-xl font-bold text-gray-900 mb-1">🔴 Custom</h3>
+      <p class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-crayRed to-rose-500 mb-6">From $<span class="base-price">899</span>+</p>
+      <ul class="text-sm text-gray-700 space-y-2 list-disc list-inside text-left mb-6">
+        <li>Unlimited pages</li>
+        <li>Full branding</li>
+        <li>Custom animations</li>
+        <li>Copywriting support</li>
+        <li>Optional CMS integration</li>
+        <li>Priority delivery</li>
+      </ul>
+    </div>
+    <div class="text-lg font-semibold text-crayYellow mt-auto">Total: $<span class="plan-total">899</span></div>
+  </div>
 </div>
 
-
-      <!-- Custom -->
-      <div class="pricing-card group bg-white border border-gray-200 rounded-2xl p-8 shadow-md hover:shadow-xl transition hover:scale-[1.03] flex flex-col justify-between" data-plan="Custom" data-base="899">
-        <div>
-          <h3 class="text-xl font-bold text-gray-900 mb-1">🔴 Custom</h3>
-          <p class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-crayRed to-rose-500 mb-6">From $<span class="base-price">899</span>+</p>
-          <ul class="text-sm text-gray-700 space-y-2 list-disc list-inside text-left mb-6">
-            <li>Unlimited pages</li>
-            <li>Full branding</li>
-            <li>Custom animations</li>
-            <li>Copywriting support</li>
-            <li>Optional CMS integration</li>
-            <li>Priority delivery</li>
-          </ul>
-        </div>
-        <div class="text-lg font-semibold text-crayYellow mt-auto">Total: $<span class="plan-total">899</span></div>
-      </div>
-    </div>
 
     <!-- Add-ons -->
     <div class="mt-20">
