--- a/index.html
+++ b/index.html
@@ -911,6 +911,177 @@
   </div>
 </section>
 
+<!-- Why You Need a Website Section -->
+<section id="why-website" class="py-24 px-6 bg-gradient-to-br from-gray-50 to-white relative overflow-hidden scroll-mt-24" data-aos="fade-up">
+  <!-- Decorative Background Elements -->
+  <div class="absolute inset-0 opacity-5">
+    <div class="absolute top-20 left-10 w-32 h-32 bg-primary-500 rounded-full blur-2xl"></div>
+    <div class="absolute bottom-20 right-10 w-40 h-40 bg-secondary-500 rounded-full blur-2xl"></div>
+    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-64 h-64 bg-accent-500 rounded-full blur-3xl"></div>
+  </div>
+
+  <div class="max-w-6xl mx-auto relative z-10">
+    <!-- Section Header -->
+    <div class="text-center mb-20">
+      <div class="inline-flex items-center gap-2 px-4 py-2 bg-primary-100 text-primary-600 rounded-full text-sm font-semibold mb-6">
+        <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
+        </svg>
+        Essential for Business Growth
+      </div>
+      <h2 class="text-3xl sm:text-4xl font-bold text-secondary-500 tracking-tight mb-6">
+        Five Compelling Reasons Your Business Needs a Website
+      </h2>
+      <p class="text-gray-600 text-base sm:text-lg max-w-3xl mx-auto leading-relaxed font-medium">
+        In today's digital-first world, a professional website isn't just an option—it's essential for business success. Here's why every Edmonton business needs a strong online presence.
+      </p>
+    </div>
+
+    <!-- Reasons Grid -->
+    <div class="grid lg:grid-cols-2 gap-8 mb-16">
+      <!-- Reason 1: Visibility -->
+      <div class="group bg-white border border-primary-200 p-8 rounded-2xl shadow-soft hover:shadow-medium hover:scale-[1.02] transition-all duration-300" data-aos="fade-up" data-aos-delay="100">
+        <div class="flex items-start gap-6">
+          <div class="w-16 h-16 bg-primary-100 rounded-2xl flex items-center justify-center flex-shrink-0 group-hover:bg-primary-200 transition-colors duration-300">
+            <svg class="w-8 h-8 text-primary-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+            </svg>
+          </div>
+          <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-4">Visibility</h3>
+            <p class="text-gray-600 leading-relaxed mb-4">
+              Even if people have heard about your company, they'll research online first before visiting. Your website provides maps, directions, and essential information that makes customers more likely to find and visit your location.
+            </p>
+            <div class="flex items-center gap-2 text-sm text-primary-600 font-medium">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              Increase discoverability by 80%
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Reason 2: Marketing -->
+      <div class="group bg-white border border-secondary-200 p-8 rounded-2xl shadow-soft hover:shadow-medium hover:scale-[1.02] transition-all duration-300" data-aos="fade-up" data-aos-delay="200">
+        <div class="flex items-start gap-6">
+          <div class="w-16 h-16 bg-secondary-100 rounded-2xl flex items-center justify-center flex-shrink-0 group-hover:bg-secondary-200 transition-colors duration-300">
+            <svg class="w-8 h-8 text-secondary-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z" />
+            </svg>
+          </div>
+          <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-4">Marketing</h3>
+            <p class="text-gray-600 leading-relaxed mb-4">
+              Your website showcases your services and products to both new and existing customers. It's the perfect platform to announce promotions, new offerings, and build customer relationships around the clock.
+            </p>
+            <div class="flex items-center gap-2 text-sm text-secondary-600 font-medium">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              24/7 marketing presence
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Reason 3: Credibility -->
+      <div class="group bg-white border border-accent-200 p-8 rounded-2xl shadow-soft hover:shadow-medium hover:scale-[1.02] transition-all duration-300" data-aos="fade-up" data-aos-delay="300">
+        <div class="flex items-start gap-6">
+          <div class="w-16 h-16 bg-accent-100 rounded-2xl flex items-center justify-center flex-shrink-0 group-hover:bg-accent-200 transition-colors duration-300">
+            <svg class="w-8 h-8 text-accent-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+          </div>
+          <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-4">Credibility</h3>
+            <p class="text-gray-600 leading-relaxed mb-4">
+              A professional website gives your business instant credibility. It's your opportunity to tell customers why they should trust you, backed by testimonials, credentials, and compelling content that builds confidence.
+            </p>
+            <div class="flex items-center gap-2 text-sm text-accent-600 font-medium">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              Build trust instantly
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Reason 4: 24/7 Accessibility -->
+      <div class="group bg-white border border-primary-200 p-8 rounded-2xl shadow-soft hover:shadow-medium hover:scale-[1.02] transition-all duration-300" data-aos="fade-up" data-aos-delay="400">
+        <div class="flex items-start gap-6">
+          <div class="w-16 h-16 bg-primary-100 rounded-2xl flex items-center justify-center flex-shrink-0 group-hover:bg-primary-200 transition-colors duration-300">
+            <svg class="w-8 h-8 text-primary-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+          </div>
+          <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-4">Accessible 24/7</h3>
+            <p class="text-gray-600 leading-relaxed mb-4">
+              Your website works for you around the clock. Customers can get information, support, and make decisions about your services whenever it's convenient for them, not just during business hours.
+            </p>
+            <div class="flex items-center gap-2 text-sm text-primary-600 font-medium">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              Always available resource
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Reason 5: Cost Effective -->
+      <div class="group bg-white border border-secondary-200 p-8 rounded-2xl shadow-soft hover:shadow-medium hover:scale-[1.02] transition-all duration-300 lg:col-span-2" data-aos="fade-up" data-aos-delay="500">
+        <div class="flex items-start gap-6">
+          <div class="w-16 h-16 bg-secondary-100 rounded-2xl flex items-center justify-center flex-shrink-0 group-hover:bg-secondary-200 transition-colors duration-300">
+            <svg class="w-8 h-8 text-secondary-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1" />
+            </svg>
+          </div>
+          <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-4">Cost Effective</h3>
+            <p class="text-gray-600 leading-relaxed mb-4">
+              Compared to traditional marketing methods, a website is incredibly cost-effective. The initial investment brings ongoing returns through qualified leads who are actively seeking your services. It's far more effective than spam emails or intrusive ads.
+            </p>
+            <div class="flex items-center gap-2 text-sm text-secondary-600 font-medium">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              Maximum ROI on marketing spend
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Call to Action -->
+    <div class="text-center bg-white border border-gray-200 p-8 rounded-2xl shadow-soft" data-aos="fade-up" data-aos-delay="600">
+      <h3 class="text-2xl font-bold text-gray-900 mb-4">Ready to Build Your Professional Website?</h3>
+      <p class="text-gray-600 mb-6 max-w-2xl mx-auto">
+        Don't let your competitors get ahead. A professional website is the foundation of your digital presence and business growth strategy.
+      </p>
+      <div class="flex flex-col sm:flex-row gap-4 justify-center">
+        <a href="#contact" class="inline-flex items-center gap-2 bg-primary-500 text-white font-semibold py-4 px-8 rounded-full shadow-medium hover:shadow-large hover:scale-105 transition duration-300 hover:bg-primary-600">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+          </svg>
+          Start Your Free Consultation
+        </a>
+        <a href="#portfolio" class="inline-flex items-center gap-2 border-2 border-gray-300 text-gray-700 font-semibold py-4 px-8 rounded-full hover:border-primary-500 hover:text-primary-500 transition-all duration-300 hover:bg-primary-50">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+          </svg>
+          View Our Work
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- 3-Step CTA Section -->
 <section id="cta-steps" class="relative pt-20 pb-24 px-6 bg-gray-50 overflow-hidden scroll-mt-24" data-aos="fade-up">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-16 items-center">
