--- a/terms.html
+++ b/terms.html
@@ -29,9 +29,13 @@
     <link rel="canonical" href="https://craytivo.com/terms.html">
     
     <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/png" href="assets/logo.png">
-    <link rel="apple-touch-icon" href="assets/logo.png">
-    <link rel="icon" type="image/svg+xml" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/logo.png" sizes="16x16">
+    <link rel="apple-touch-icon" href="assets/logo.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="assets/logo.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="assets/logo.png" sizes="512x512">
+    <link rel="shortcut icon" href="assets/logo.png">
+    <link rel="mask-icon" href="assets/logo.png" color="#A22C29">
     
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
