--- a/index.html
+++ b/index.html
@@ -240,13 +240,19 @@
             
             <nav class="hidden lg:flex items-center space-x-8" aria-label="Main navigation">
                 <ul class="flex space-x-8 items-center">
-                    <li><a href="#home" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="home">
+                    <li><a href="index.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="home">
                         <span class="relative z-10">Home</span>
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
                     </a></li>
-                    <li><a href="#how-it-works" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="how-it-works">
-                        <span class="relative z-10">How It Works</span>
+                    <li><a href="services.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="services">
+                        <span class="relative z-10">Services</span>
+                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
+                        <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
+                    </a></li>
+                    
+                    <li><a href="pricing.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="pricing">
+                        <span class="relative z-10">Pricing</span>
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
                     </a></li>
@@ -255,13 +261,7 @@
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
                     </a></li>
-                    <li><a href="#pricing" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="pricing">
-                        <span class="relative z-10">Pricing</span>
-                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
-                        <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
-                    </a></li>
-
-                    <li><a href="#contact" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="contact">
+                    <li><a href="contact.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="contact">
                         <span class="relative z-10">Contact</span>
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
@@ -322,14 +322,14 @@
                             </a>
                         </li>
                         <li class="group">
-                            <a href="#how-it-works" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="how-it-works">
+                            <a href="services.html" class="mobile-nav-link flex items-center space-x-2 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="services">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"></path>
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
                                     </svg>
                                 </div>
                                 <span class="relative">
-                                    How It Works
+                                    Services
                                     <span class="absolute -bottom-1 left-0 w-0 h-1 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 group-hover:w-full rounded-full"></span>
                                 </span>
                             </a>
