--- a/terms.html
+++ b/terms.html
@@ -117,23 +117,19 @@
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
                     </a></li>
-                    <li><a href="#how-it-works" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="how-it-works">
-                        <span class="relative z-10">How It Works</span>
+                    <li><a href="services.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="services">
+                        <span class="relative z-10">Services</span>
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
                     </a></li>
-                    <li><a href="#work" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="work">
-                        <span class="relative z-10">Portfolio</span>
-                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
-                        <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
-                    </a></li>
-                    <li><a href="#pricing" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="pricing">
+                
+                    <li><a href="pricing.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="pricing">
                         <span class="relative z-10">Pricing</span>
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
                     </a></li>
 
-                    <li><a href="#contact" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="contact">
+                    <li><a href="contact.html" class="nav-link text-sm font-medium text-night/80 hover:text-auburn hover:bg-auburn/10 px-4 py-2.5 rounded-lg transition-all duration-300 relative group" data-section="contact">
                         <span class="relative z-10">Contact</span>
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 transform -translate-x-1/2 group-hover:w-4/5 rounded-full"></span>
                         <span class="absolute inset-0 bg-auburn/5 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
@@ -141,7 +137,7 @@
                 </ul>
             </nav>
             
-            <a href="#get-started" class="hidden lg:inline-block bg-gradient-to-r from-auburn to-burnt-umber text-white px-6 py-2 rounded-lg text-sm font-bold cursor-pointer transition-all duration-300 hover:-translate-y-0.5 hover:shadow-lg shadow-md relative overflow-hidden group">
+            <a href="index.html#get-started" class="hidden lg:inline-block bg-gradient-to-r from-auburn to-burnt-umber text-white px-6 py-2 rounded-lg text-sm font-bold cursor-pointer transition-all duration-300 hover:-translate-y-0.5 hover:shadow-lg shadow-md relative overflow-hidden group">
                 <span class="relative z-10">Get Started</span>
                 <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/20 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-500"></div>
             </a>
@@ -194,20 +190,20 @@
                             </a>
                         </li>
                         <li class="group">
-                            <a href="#how-it-works" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="how-it-works">
+                            <a href="services.html" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="services">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"></path>
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
                                     </svg>
                                 </div>
                                 <span class="relative">
-                                    How It Works
+                                    Services
                                     <span class="absolute -bottom-1 left-0 w-0 h-1 bg-gradient-to-r from-auburn to-burnt-umber transition-all duration-300 group-hover:w-full rounded-full"></span>
                                 </span>
                             </a>
                         </li>
                         <li class="group">
-                            <a href="#work" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="work">
+                            <a href="index.html#work" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="work">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
@@ -220,7 +216,7 @@
                             </a>
                         </li>
                         <li class="group">
-                            <a href="#pricing" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="pricing">
+                            <a href="pricing.html" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="pricing">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path>
@@ -246,7 +242,7 @@
                             </a>
                         </li>
                         <li class="group">
-                            <a href="#contact" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="contact">
+                            <a href="index.html#contact" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="contact">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
@@ -268,7 +264,7 @@
                         <h3 class="text-xl font-bold text-night mb-2">Ready to Get Started?</h3>
                         <p class="text-gray-600 text-sm">Transform your business today</p>
                     </div>
-                    <a href="#get-started" class="w-full bg-gradient-to-r from-auburn to-burnt-umber text-white py-4 px-6 rounded-2xl text-lg font-bold text-center block transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl shadow-xl relative overflow-hidden group">
+                    <a href="index.html#get-started" class="w-full bg-gradient-to-r from-auburn to-burnt-umber text-white py-4 px-6 rounded-lg text-lg font-bold text-center block transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl shadow-xl relative overflow-hidden group">
                         <span class="relative z-10">Get Started</span>
                         <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/20 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-700"></div>
                     </a>
@@ -881,10 +877,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Services</h4>
                     <ul class="space-y-2 text-gray-300">
-                        <li><a href="#work" class="hover:text-auburn transition-colors duration-200">Web Design</a></li>
-                        <li><a href="#work" class="hover:text-auburn transition-colors duration-200">Landing Pages</a></li>
-                        <li><a href="#work" class="hover:text-auburn transition-colors duration-200">E-commerce</a></li>
-                        <li><a href="#work" class="hover:text-auburn transition-colors duration-200">SEO Optimization</a></li>
+                        <li><a href="index.html#work" class="hover:text-auburn transition-colors duration-200">Web Design</a></li>
+                        <li><a href="index.html#work" class="hover:text-auburn transition-colors duration-200">Landing Pages</a></li>
+                        <li><a href="index.html#work" class="hover:text-auburn transition-colors duration-200">E-commerce</a></li>
+                        <li><a href="index.html#work" class="hover:text-auburn transition-colors duration-200">SEO Optimization</a></li>
                     </ul>
                 </div>
 
