--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <div class="flex-1 px-6 py-6 bg-white/90">
                     <ul class="space-y-3">
                         <li class="group">
-                            <a href="#home" class="flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap">
+                            <a href="index.html" class="flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7a2 2 0 012-2h6.586a2 2 0 012 2v6.586a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"></path>
@@ -331,7 +331,7 @@
                         </li>
                         
                         <li class="group">
-                            <a href="#pricing" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="pricing">
+                            <a href="pricing.html" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="pricing">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path>
@@ -345,7 +345,7 @@
                         </li>
                         
                         <li class="group">
-                            <a href="#contact" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="contact">
+                            <a href="contact.html" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="contact">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
@@ -366,7 +366,7 @@
                         <h3 class="text-xl font-bold text-night mb-2">Ready to Get Started?</h3>
                         <p class="text-gray-600 text-sm">Transform your business today</p>
                     </div>
-                    <a href="#get-started" class="w-full bg-gradient-to-r from-auburn to-burnt-umber text-white py-4 px-6 rounded-2xl text-lg font-bold text-center block transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl shadow-xl relative overflow-hidden group">
+                    <a href="contact.html" class="w-full bg-gradient-to-r from-auburn to-burnt-umber text-white py-4 px-6 rounded-2xl text-lg font-bold text-center block transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl shadow-xl relative overflow-hidden group">
                         <span class="relative z-10">Get Started</span>
                         <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/20 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-700"></div>
                     </a>
