--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
                             <a href="index.html" class="flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7a2 2 0 012-2h6.586a2 2 0 012 2v6.586a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"></path>
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V5a2 2 0 012-2h6.586a2 2 0 012 2v6.586a2 2 0 01-2 2H10a2 2 0 01-2-2V7z"></path>
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
                                     </svg>
                                 </div>
                                 <span class="relative">
@@ -334,7 +333,7 @@
                             <a href="pricing.html" class="mobile-nav-link flex items-center space-x-3 text-base font-semibold text-night hover:text-auburn transition-all duration-300 group-hover:translate-x-2 whitespace-nowrap" data-section="pricing">
                                 <div class="w-8 h-8 bg-white/80 rounded-lg flex items-center justify-center group-hover:bg-white/90 transition-all duration-300 group-hover:scale-110 shadow-lg group-hover:shadow-xl flex-shrink-0">
                                     <svg class="w-4 h-4 text-auburn group-hover:scale-110 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path>
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path>
                                     </svg>
                                 </div>
                                 <span class="relative">
